Fixed banner-text overflowing on resize. Added some fade-in animations. Dynamically loading data from pseudo-json file (just the testimonial data for now)

--- a/css/style.css
+++ b/css/style.css
@@ -153,9 +153,9 @@ body {
    font-family: 'Inter', sans-serif;
 }
 
-/* =============================== */
-/* ============ HEADER =========== */
-/* =============================== */
+/* =============================================== */
+/* ==================== HEADER =================== */
+/* =============================================== */
 .index .header {
    display: flex;
    flex-direction: row;
@@ -167,9 +167,9 @@ body {
    box-shadow: 0px 0.5px 4px gray;
 }
 
-/* =============================== */
-/* ===== HEADER + MENU ITEMS ===== */
-/* =============================== */
+/* =============================================== */
+/* ============= HEADER + MENU ITEMS ============= */
+/* =============================================== */
 .index .header img {
    margin-left: 1.5rem;
    height: 3rem;
@@ -209,9 +209,9 @@ body {
    }
 }
 
-/* ================================ */
-/* ======== LOGIN BUTTON ========== */
-/* ================================ */
+/* ================================================ */
+/* ================ LOGIN BUTTON ================== */
+/* ================================================ */
 .index .header .login-btn {
    background: none;
    border: none;
@@ -231,18 +231,38 @@ body {
    cursor: pointer;
 }
 
-/* ============================= */
-/* ===== SECTIONS CONTAINER ==== */
-/* ============================= */
+/* ============================================= */
+/* ============= SECTIONS CONTAINER ============ */
+/* ============================================= */
 .index .sections-container {
    display: flex;
    flex-direction: column;
    gap: 1rem;
 }
 
-/* ============================= */
-/* =========== HERO ============ */
-/* ============================= */
+/* ============================================= */
+/* =================== HERO ==================== */
+/* ============================================= */
+@keyframes hero-img-fade-in {
+   0% {
+      opacity: 0%;
+   }
+   100% {
+      opacity: 50%;
+   }
+}
+
+@keyframes hero-text-fade-in {
+   0% {
+      opacity: 0%;
+      transform: translateX(-100px);
+   } 
+   100% {
+      opacity: 100%;
+      transform: translateX(0px);
+   }
+}
+
 .index .sections-container .hero-container {
    display: grid;
    grid-template-areas: "hero-grid-overlay";
@@ -250,18 +270,18 @@ body {
 
 .index .sections-container .hero-container img {
    grid-area: hero-grid-overlay;
-   max-width: 100%;
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
    overflow: hidden;
    opacity: 50%;   
+   animation: hero-img-fade-in 0.5s ease-in-out;
 }
-
-/* .index .sections-container .hero-container img {
-   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-} */
 
 .index .sections-container .hero-container .hero {
    grid-area: hero-grid-overlay;
    max-width: calc(20vw * 2);
+   max-height: 100%;
    opacity: 100%;
 
    margin-left: var(--xpad);
@@ -273,6 +293,8 @@ body {
    flex-direction: column;
    justify-content: center;
    align-items: start;
+
+   animation: hero-text-fade-in 0.5s ease;
 }
 
 .index .sections-container .hero-container .hero h1 {
@@ -280,6 +302,9 @@ body {
    font-weight: 700;
 }
 
+/* ============================================= */
+/* ================= WHY AZOOM ================= */
+/* ============================================= */
 .index .sections-container .why-azoom {
    display: flex;
    flex-direction: column;
@@ -328,16 +353,30 @@ body {
    min-height: 8rem;
 }
 
+@keyframes reason-fade-up {
+   0% {
+      opacity: 0%;
+      transform: translateY(50px);
+   } 
+   100% {
+      opacity: 100%;
+      transform: translateY(0px);
+   }
+}
+
 .index .sections-container .why-azoom .reasons-container div:nth-child(1) {
    background: var(--secondary-400);
+   animation: reason-fade-up 0.6s ease 0.5s 1 normal both;
 }
 
 .index .sections-container .why-azoom .reasons-container div:nth-child(2) {
    background: var(--primary-400);
+   animation: reason-fade-up 0.6s ease 1s 1 normal both;
 }
 
 .index .sections-container .why-azoom .reasons-container div:nth-child(3) {
    background: var(--accent-400);
+   animation: reason-fade-up 0.6s ease 1.5s 1 normal both;
 }
 
 @media screen and (min-width: 991px) {
@@ -347,29 +386,33 @@ body {
    }
 }
 
-/* =============================== */
-/* ========= GET STARTED ========= */
-/* =============================== */
+/* =============================================== */
+/* ================= GET STARTED ================= */
+/* =============================================== */
 .index .sections-container .get-started-container {
    background: var(--primary-200);
    border-radius: 0.8rem;
 }
 
-/* ================================ */
-/* ========= TESTIMONIALS ========= */
-/* ================================ */
+/* ================================================ */
+/* ================= TESTIMONIALS ================= */
+/* ================================================ */
 .index .sections-container .testimonials {
    background: linear-gradient(#000000, #262626);
-   min-height: 15rem;
-
-   
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
 .index .sections-container .testimonials h1 {
    color: white;
 }
 
-/* ============================= */
-/* ========== FOOTER =========== */
-/* ============================= */
+.index .sections-container .testimonials .testimonial-carousel {
+
+}
+
+/* ============================================= */
+/* ================== FOOTER =================== */
+/* ============================================= */
 .index .sections-container footer {}
